Improved site displayed when no JS is active

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,15 @@
 </head>
 <body>
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <noscript>
+    <div style="display: flex; flex-direction: column; align-items: center;">
+      <img src="https://www.aldrune.com/static/wiki/images/gandalf.jpg" style="max-width: 20rem; max-height:20rem; margin-bottom: 2rem" alt="">
+      <div style="text-align: center;">
+        Heya, sorry but this webpage is built almost entirely with javascript. <br>
+        If you want to go on without JS you will need to visit wiki1, a previous iteration of this webpage. <br>
+        To do so, <a href="https://www.aldrune.com/wiki1/wiki">click on this link</a> 
+      </div>
+    </div>
+  </noscript>
 </body>
 </html>
