Added font-awesome 5 support

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
   <meta name="theme-color" content="#1976d2">
 </head>
+
 <body>
   <app-root></app-root>
+
   <noscript>
     <div style="display: flex; flex-direction: column; align-items: center;">
       <img src="https://www.aldrune.com/static/wiki/images/gandalf.jpg" style="max-width: 20rem; max-height:20rem; margin-bottom: 2rem" alt="">
@@ -21,5 +24,6 @@
       </div>
     </div>
   </noscript>
+
 </body>
 </html>
