--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <meta name="description" content="A wiki-like webpage that documents the Dungeons&Dragons campaign of one group. Documented by Philipp Doerner, created by Samuel Day">
 </head>
 
 <body>
