--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,23 @@
   <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <meta name="description" content="A wiki-like webpage that documents the Dungeons&Dragons campaign of one group. Documented by Philipp Doerner, created by Samuel Day">
+
+  <!-- METADATA: General Meta Tags -->
+  <meta name="description" content="A wiki-like webpage that documents the Dungeons&Dragons campaign of the world of Aldrune. The campaign is documented here by Philipp Doerner, but is created by Samuel Day">
+  <meta name="author" content="Philipp Doerner">
+ 
+  <!-- METADATA: Open Graph Data -->
+  <meta property="og:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
+  <meta property="og:description" content="A wiki-like webpage that documents the Dungeons&Dragons campaign of the world of Aldrune. The campaign is documented here by Philipp Doerner, but is created by Samuel Day">
+  <meta property="og:title" content="AldruneWiki">
+
+  <!-- METADATA: Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="A wiki of Aldrune - A D&D campaign" />
+  <meta name="twitter:description" content="Learn more about the world of Aldrune" />
+  <meta name="twitter:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
+  <meta name="twitter:alt" content="The icon of the Aldrune webpage">
+
 </head>
 
 <body>
@@ -21,7 +37,7 @@
       <div style="text-align: center;">
         Heya, sorry but this webpage is built almost entirely with javascript. <br>
         If you want to go on without JS you will need to visit wiki1, a previous iteration of this webpage. <br>
-        To do so, <a href="https://www.aldrune.com/wiki1/wiki">click on this link</a> 
+        To do so, open another private browser window and go to this URL: https://www.aldrune.com/wiki1/wiki 
       </div>
     </div>
   </noscript>
