Added searchindex metadata

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AldruneWiki</title>
+  <title> AldruneWiki </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <meta name="color-scheme" content="normal">
 
   <!-- METADATA: General Meta Tags -->
   <meta name="description" content="A wiki-like webpage that documents the Dungeons&Dragons campaign of the world of Aldrune. The campaign is documented here by Philipp Doerner, but is created by Samuel Day">
@@ -25,6 +26,12 @@
   <meta name="twitter:description" content="Learn more about the world of Aldrune" />
   <meta name="twitter:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
   <meta name="twitter:alt" content="The icon of the Aldrune webpage">
+
+  <!-- METADATA: Search Engines -->
+  <meta name="robots" content="all">
+  <meta name="robots" content="index">
+  <meta name="robots" content="follow">
+
 
 </head>
 
