--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
   <noscript>
     <div style="display: flex; flex-direction: column; align-items: center;">
-      <img src="https://www.aldrune.com/static/wiki/images/gandalf.jpg" style="max-width: 20rem; max-height:20rem; margin-bottom: 2rem" alt="">
+      <img src="/assets/error_images/noscript.jpg" style="max-width: 20rem; max-height:20rem; margin-bottom: 2rem" alt="">
       <div style="text-align: center;">
         Heya, sorry but this webpage is built almost entirely with javascript. <br>
         If you want to go on without JS you will need to visit wiki1, a previous iteration of this webpage. <br>
