Adjusted index.html to the new situation

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title> AldruneWiki </title>
+  <title> Storyfont </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,18 +12,18 @@
   <meta name="color-scheme" content="normal">
 
   <!-- METADATA: General Meta Tags -->
-  <meta name="description" content="A wiki-like webpage that documents the Dungeons&Dragons campaign of the world of Aldrune.">
+  <meta name="description" content="A wiki-like webpage that documents pen and paper campaigns">
   <meta name="author" content="Philipp Doerner">
  
   <!-- METADATA: Open Graph Data -->
   <meta property="og:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
-  <meta property="og:description" content="A wiki-like webpage that documents the Dungeons&Dragons campaign of the world of Aldrune.">
-  <meta property="og:title" content="AldruneWiki">
+  <meta property="og:description" content="A wiki-like webpage that documents pen and paper campaigns">
+  <meta property="og:title" content="Storyfont">
 
   <!-- METADATA: Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Aldrune - A D&D campaign" />
-  <meta name="twitter:description" content="Learn more about the world of Aldrune" />
+  <meta name="twitter:title" content="Storyfont - A font containing the story of your campaign" />
+  <meta name="twitter:description" content="Access to members only" />
   <meta name="twitter:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
   <meta name="twitter:alt" content="The icon of the Aldrune webpage">
 
@@ -42,9 +42,8 @@
     <div style="display: flex; flex-direction: column; align-items: center;">
       <img src="/assets/error_images/noscript.jpg" style="max-width: 20rem; max-height:20rem; margin-bottom: 2rem" alt="">
       <div style="text-align: center;">
-        Heya, sorry but this webpage is built almost entirely with javascript. <br>
-        If you want to go on without JS you will need to visit wiki1, a previous iteration of this webpage. <br>
-        To do so, open another private browser window and go to this URL: https://www.aldrune.com/wiki1/wiki 
+        Heya, sorry but this webpage is built almost entirely with javascript, as without it many of the interactive 
+        features on this website would not be possible.
       </div>
     </div>
   </noscript>
