Changed page title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title> Storyfont </title>
+  <title> StoryFont </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -18,11 +18,11 @@
   <!-- METADATA: Open Graph Data -->
   <meta property="og:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
   <meta property="og:description" content="A wiki-like webpage that documents pen and paper campaigns">
-  <meta property="og:title" content="Storyfont">
+  <meta property="og:title" content="StoryFont">
 
   <!-- METADATA: Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Storyfont - A font containing the story of your campaign" />
+  <meta name="twitter:title" content="StoryFont - A font containing the story of your campaign" />
   <meta name="twitter:description" content="Access to members only" />
   <meta name="twitter:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
   <meta name="twitter:alt" content="The icon of the Aldrune webpage">
