Adjusted twitter card text

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
   <!-- METADATA: Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="StoryFont - A font containing the story of your campaign" />
+  <meta name="twitter:title" content="StoryFont - A font containing campaign stories" />
   <meta name="twitter:description" content="Access to members only" />
   <meta name="twitter:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
   <meta name="twitter:alt" content="The icon of the Aldrune webpage">
