--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="author" content="Philipp Doerner">
  
   <!-- METADATA: Open Graph Data -->
-  <meta property="og:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
+  <meta property="og:image" content="/assets/icons/title_icons/fountain.svg">
   <meta property="og:description" content="A wiki-like webpage that documents pen and paper campaigns">
   <meta property="og:title" content="StoryFont">
 
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="StoryFont - A font containing campaign stories" />
   <meta name="twitter:description" content="Access to members only" />
-  <meta name="twitter:image" content="https://www.aldrune.com/static/aldrune_icon/apple-touch-icon.png">
+  <meta name="twitter:image" content="/assets/icons/title_icons/fountain.svg">
   <meta name="twitter:alt" content="The icon of the Aldrune webpage">
 
   <!-- METADATA: Search Engines -->
