Moved back to old aldrune icons as general page icons because I just like them the most

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title> StoryFont </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/icons/title_icons/fountain.svg">
-  <link rel="apple-touch-icon" href="/assets/icons/title_icons/fountain.svg">
+  <link rel="icon" type="image/x-icon" href="/assets/icons/icon-72x72.png">
+  <link rel="apple-touch-icon" href="/assets/icons/icon-512x512.webp">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1d2123">
   <meta name="color-scheme" content="normal">
